// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageOptions component should render correct languages for ELL Diagnostic 1 1`] = `
Array [
  <button
    className="language-button"
    key="english-button"
    onClick={[Function]}
    type="button"
    value="english"
  >
    <img
      alt="english flag"
      src="https://assets.quill.org/images/flags/usa.png"
    />
    <span>
      English
    </span>
  </button>,
  <button
    className="language-button"
    key="chinese-button"
    onClick={[Function]}
    type="button"
    value="chinese"
  >
    <img
      alt="chinese flag"
      src="https://assets.quill.org/images/flags/china.png"
    />
    <span>
      中文
    </span>
  </button>,
  <button
    className="language-button"
    key="hindi-button"
    onClick={[Function]}
    type="button"
    value="hindi"
  >
    <img
      alt="hindi flag"
      src="https://assets.quill.org/images/flags/india.png"
    />
    <span>
      हिंदी
    </span>
  </button>,
  <button
    className="language-button"
    key="spanish-button"
    onClick={[Function]}
    type="button"
    value="spanish"
  >
    <img
      alt="spanish flag"
      src="https://assets.quill.org/images/flags/spain.png"
    />
    <span>
      Español
    </span>
  </button>,
  <button
    className="language-button"
    key="french-button"
    onClick={[Function]}
    type="button"
    value="french"
  >
    <img
      alt="french flag"
      src="https://assets.quill.org/images/flags/france.png"
    />
    <span>
      Français
    </span>
  </button>,
  <button
    className="language-button"
    key="arabic-button"
    onClick={[Function]}
    type="button"
    value="arabic"
  >
    <img
      alt="arabic flag"
      src="https://assets.quill.org/images/flags/egypt.png"
    />
    <span>
      العربية
    </span>
  </button>,
  <button
    className="language-button"
    key="russian-button"
    onClick={[Function]}
    type="button"
    value="russian"
  >
    <img
      alt="russian flag"
      src="https://assets.quill.org/images/flags/russia.png"
    />
    <span>
      Русский
    </span>
  </button>,
  <button
    className="language-button"
    key="portuguese-button"
    onClick={[Function]}
    type="button"
    value="portuguese"
  >
    <img
      alt="portuguese flag"
      src="https://assets.quill.org/images/flags/brazil.png"
    />
    <span>
      Português
    </span>
  </button>,
  <button
    className="language-button"
    key="urdu-button"
    onClick={[Function]}
    type="button"
    value="urdu"
  >
    <img
      alt="urdu flag"
      src="https://assets.quill.org/images/flags/pakistan.png"
    />
    <span>
      اردو
    </span>
  </button>,
  <button
    className="language-button"
    key="german-button"
    onClick={[Function]}
    type="button"
    value="german"
  >
    <img
      alt="german flag"
      src="https://assets.quill.org/images/flags/germany.png"
    />
    <span>
      Deutsche
    </span>
  </button>,
  <button
    className="language-button"
    key="japanese-button"
    onClick={[Function]}
    type="button"
    value="japanese"
  >
    <img
      alt="japanese flag"
      src="https://assets.quill.org/images/flags/japan.png"
    />
    <span>
      日本語
    </span>
  </button>,
  <button
    className="language-button"
    key="korean-button"
    onClick={[Function]}
    type="button"
    value="korean"
  >
    <img
      alt="korean flag"
      src="https://assets.quill.org/images/flags/south_korea.png"
    />
    <span>
      한국어
    </span>
  </button>,
  <button
    className="language-button"
    key="vietnamese-button"
    onClick={[Function]}
    type="button"
    value="vietnamese"
  >
    <img
      alt="vietnamese flag"
      src="https://assets.quill.org/images/flags/vietnam.png"
    />
    <span>
      Tiếng Việt
    </span>
  </button>,
  <button
    className="language-button"
    key="thai-button"
    onClick={[Function]}
    type="button"
    value="thai"
  >
    <img
      alt="thai flag"
      src="https://assets.quill.org/images/flags/thailand.png"
    />
    <span>
      ไทย
    </span>
  </button>,
  <button
    className="language-button"
    key="ukrainian-button"
    onClick={[Function]}
    type="button"
    value="ukrainian"
  >
    <img
      alt="ukrainian flag"
      src="https://assets.quill.org/images/flags/ukraine.png"
    />
    <span>
      Українська
    </span>
  </button>,
  <button
    className="language-button"
    key="tagalog-button"
    onClick={[Function]}
    type="button"
    value="tagalog"
  >
    <img
      alt="tagalog flag"
      src="https://assets.quill.org/images/flags/philippines.png"
    />
    <span>
      Tagalog
    </span>
  </button>,
  <button
    className="language-button"
    key="dari-button"
    onClick={[Function]}
    type="button"
    value="dari"
  >
    <img
      alt="dari flag"
      src="https://assets.quill.org/images/flags/afghanistan.png"
    />
    <span>
      درى
    </span>
  </button>,
]
`;

exports[`LanguageOptions component should render correct languages for ELL Diagnostic 2 1`] = `
Array [
  <button
    className="language-button"
    key="english-button"
    onClick={[Function]}
    type="button"
    value="english"
  >
    <img
      alt="english flag"
      src="https://assets.quill.org/images/flags/usa.png"
    />
    <span>
      English
    </span>
  </button>,
  <button
    className="language-button"
    key="arabic-button"
    onClick={[Function]}
    type="button"
    value="arabic"
  >
    <img
      alt="arabic flag"
      src="https://assets.quill.org/images/flags/egypt.png"
    />
    <span>
      العربية
    </span>
  </button>,
  <button
    className="language-button"
    key="chinese-button"
    onClick={[Function]}
    type="button"
    value="chinese"
  >
    <img
      alt="chinese flag"
      src="https://assets.quill.org/images/flags/china.png"
    />
    <span>
      中文
    </span>
  </button>,
  <button
    className="language-button"
    key="french-button"
    onClick={[Function]}
    type="button"
    value="french"
  >
    <img
      alt="french flag"
      src="https://assets.quill.org/images/flags/france.png"
    />
    <span>
      Français
    </span>
  </button>,
  <button
    className="language-button"
    key="hindi-button"
    onClick={[Function]}
    type="button"
    value="hindi"
  >
    <img
      alt="hindi flag"
      src="https://assets.quill.org/images/flags/india.png"
    />
    <span>
      हिंदी
    </span>
  </button>,
  <button
    className="language-button"
    key="spanish-button"
    onClick={[Function]}
    type="button"
    value="spanish"
  >
    <img
      alt="spanish flag"
      src="https://assets.quill.org/images/flags/spain.png"
    />
    <span>
      Español
    </span>
  </button>,
  <button
    className="language-button"
    key="vietnamese-button"
    onClick={[Function]}
    type="button"
    value="vietnamese"
  >
    <img
      alt="vietnamese flag"
      src="https://assets.quill.org/images/flags/vietnam.png"
    />
    <span>
      Tiếng Việt
    </span>
  </button>,
]
`;
